fixing mobile spacing

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -158,41 +158,41 @@
       position: absolute;
       margin: 0px;
       top: 350px;
-      left: 425px;
+      left: 400px;
     }
 
     #spock-icon {
       position: absolute;
       margin: 0px;
       top: 350px;
-      left: 125px;
+      left: 100px;
     }
 
     #rock-icon {
       position: absolute;
       margin: 0px;
       top: 525px;
-      left: 375px;
+      left: 350px;
     }
 
     #lizard-icon {
       position: absolute;
       margin: 0px;
       top: 525px;
-      left: 175px;
+      left: 150px;
     }
 
-    .icon-container {
-      height: 5rem;
-      width: 5rem;
+    // .icon-container {
+    //   height: 5rem;
+    //   width: 5rem;
 
-      // &::before {
-      //   height: 80%;
-      //   width: 80%;
-      //   top: -10px;
-      //   right: -7px
-      // }
-    }
+    //   &::before {
+    //     height: 80%;
+    //     width: 80%;
+    //     top: -10px;
+    //     right: -7px
+    //   }
+    // }
   }
 
   #game-play-container {
